Think completed L04 Personal Assignment
